kubernetes/apps/proxy/unraid/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: unraid
spec:
  ports:
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: unraid
  labels:
    kubernetes.io/service-name: unraid
addressType: IPv4
ports:
  - name: https
    appProtocol: https
    protocol: TCP
    port: 443
endpoints:
  - addresses:
      - ${MEDIA_SERVER}
